--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
     "vue-jest": "latest"
   },
   "optionalDependencies": {
-    "ipx": "^0.9.4"
+    "ipx": "0.9.1"
   },
   "publishConfig": {
     "access": "public"
